# logo_design_full_stack

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  test.sh
backend/app/: __init__.py
backend/app/api/v1/: auth_router.py  column_router.py  health_router.py  portfolio_router.py  review_router.py
backend/app/auth/: dependencies.py  jwt_codec.py  password_hasher.py
backend/app/core/: dependencies.py
backend/app/core/configs/: __init__.py  settings.py
backend/app/core/database/: __init__.py  session.py
backend/app/core/utils/: file.py  uuid_formatter.py
backend/app/dtos/auth/: __init__.py  login_request.py  token_refresh_response.py  token_response.py
backend/app/dtos/column/: column_response.py
backend/app/dtos/common/: paginated_response.py
backend/app/dtos/portfolio/: __init__.py  portfolio_create_request.py  portfolio_response.py  portfolio_update_request.py
backend/app/dtos/review/: __init__.py  review_create_request.py  (+4 more)
backend/app/log/: __init__.py  route.py
backend/app/models/: __init__.py  base.py  column.py  column_enums.py  order.py  payment.py  portfolio.py  portfolio_enums.py  review.py  user.py
backend/app/scripts/: create_admin.py
backend/app/services/: column_service.py  portfolio_service.py  review_service.py
backend/migrations/: env.py
backend/migrations/versions/: 024a02c34196_update_portfolio_model.py  1bfe28a278bb_add_category_to_column.py  aec3affc3fe8_add_thumbnail_url_to_column.py  c007e8f90964_initial_migration.py  e99fcd513cef_create_column_table.py
(+76 files in other folders)
